--- a/src/styles/form-modules.scss
+++ b/src/styles/form-modules.scss
@@ -34,6 +34,7 @@
   @include meta.load-css("modules/buttons");
   @include meta.load-css("modules/validation");
   @include meta.load-css("modules/tom-select-college");
+  @include meta.load-css("modules/college-filters");
 
   // ==========================================
   // UTILIDADES - ESPACIADO Y DISPLAY
