--- a/src/styles/form-modules.scss
+++ b/src/styles/form-modules.scss
@@ -35,6 +35,7 @@
   @include meta.load-css("modules/validation");
   @include meta.load-css("modules/tom-select-college");
   @include meta.load-css("modules/college-filters");
+  @include meta.load-css("modules/university-filters");
 
   // ==========================================
   // UTILIDADES - ESPACIADO Y DISPLAY
